# gha-issue-resolution

./: CHANGELOG.md  Dockerfile  README.md  TECHNICAL_DESIGN.md  `README.md`  action.yml  pyproject.toml
.github/: issue_resolution.yml
.github/workflows/: build.yml  issue_resolution.yml  release-please.yml
src/gha_issue_resolution/: __init__.py  __main__.py  ai_utils.py  comment_generator.py  comment_handler.py  comment_types.py  conversation_handler.py  file_analyzer.py  file_utils.py  github_utils.py  issue_processor.py  pr_handler.py  process_issues.py
tests/: __init__.py
